2014-08-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (set_window_pagetop): If point would end up past
	bottom of displayed part of node, put it on the last displayed line.

2014-08-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (_scroll_forward, _scroll_backward): Arguments
	changed.  All callers updated.  Don't display an error message when
	staying in the same node.
	* doc/info-stnd.texi (Variables): Mention what mouse is used for.
	(Node Commands) <goto-invocation>: Add missing closing parenthesis
	and 'vi-like operation' text.
	* doc/texinfo.texi (Overview): Remove two extra words.

2014-08-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/variables.c (info_variables): New user variable 'mouse'.
	* info/terminal.c (mouse_protocol): New variable.
	* info/terminal.h (MP_NONE, MP_NORMAL_TRACKING): New preprocessor
	definitions.
	* info/terminal.c (terminal_initialize_terminal): Check if
	mouse tracking was turned off.
	* info/variables.c (describe_variable): Allow arbitarily long values
	for variables.
	* doc/info-stnd.texi (Variables): Document 'mouse' variable.

2014-08-23  Karl Berry  <karl@gnu.org>

	* Texinfo/Convert/Plaintext.pm (converter_initialize): put 
	push_top_formatter after setting 'fillcolumn' such that it is
	taken into account.

2014-08-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_read_and_dispatch): Consider ESC <key> to be
	the same as Meta-<key>.
	* info/infomap.c (default_emacs_like_info_keys)
	(default_vi_like_info_keys): Refer to key sequences starting ESC with
	KEYMAP_META instead.

2014-08-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/texinfo.texi: Remove extra space in menu references to
	"@- @hyphenation" node.  Report from Vincent Belaïche.

	* info/info-stnd.texi (Searching Commands): Add reference to explain
	regular expressions.

2014-08-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_parse_and_select): Initialize line_number field
	of reference.